Improved Specification, deleted extra methods from repo. Realisation of audition started.